# PDFForge-

./: .env.example  .gitignore  README.md  package-lock.json  package.json  render.yaml  vercel.json
.github/workflows/: deploy-gh-pages.yml  deploy-vercel.yml
api/: index.js
engine/: CMakeLists.txt
engine/src/: aes_codec.cpp  aes_codec.h  deflate_codec.cpp  deflate_codec.h  engine_api.h  engine_util.cpp  engine_util.h  main.cpp  pdf_ops.cpp  pdf_ops.h  pdf_xref_parser.c  pdf_xref_parser.h  rle_codec.cpp  rle_codec.h
website/client/: index.html  package.json  tailwind.config.js  vite.config.js
website/client/src/: App.jsx  Layout.jsx  index.css  main.jsx  utils.js
website/client/src/components/: PageShell.jsx  ResultPanel.jsx  Spinner.jsx  UploadBox.jsx
website/client/src/pages/: Home.jsx  ToolPage.jsx
website/client/src/tools/: config.js
website/compressed/: Percentages_lyst6318-compressed-1779309011584-276aa5be488f.huff
website/server/: package.json
website/server/compressed/: TCS NQT Detailed Syllabus 2026-compressed-1778874444926-0adae12b3b36.huff  TCS NQT Detailed Syllabus 2026-compressed-1778874898957-5047c647635c.huff  sample-compressed-1778874316641-040e70b16dad.huff
website/server/scripts/: make_test_pdf.js
website/server/src/: app.js  index.js  routes.js
website/server/src/config/: db.js
website/server/src/middleware/: errorHandler.js
website/server/src/models/: Operation.js
website/temp/: compress_resp.json  decompress_resp.json  sample_compressed.huff
website/uploads/: 1779308442851-sample.txt
(+8 files in other folders)
